WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316190
[GStreamer] mediaTime from requestVideoFrameCallback is wrong in case of captureCanvas as source
https://bugs.webkit.org/show_bug.cgi?id=316190
Summary
[GStreamer] mediaTime from requestVideoFrameCallback is wrong in case of capt...
Przemyslaw Gorszkowski
Reported
2026-06-03 02:42:09 PDT
The mediaTime provided by requestVideoFrameCallback is wrong (huge number) in case we use canvas as a source of frames for video element(mediastream).
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2026-06-03 05:37:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66364
EWS
Comment 2
2026-06-04 01:59:49 PDT
Committed
314533@main
(82c645da79b5): <
https://commits.webkit.org/314533@main
> Reviewed commits have been landed. Closing PR #66364 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-04 02:00:14 PDT
<
rdar://problem/178705491
>
EWS
Comment 4
2026-06-07 23:20:17 PDT
Committed
305877.722@webkitglib/2.52
(aec9d2ad958e): <
https://commits.webkit.org/305877.722@webkitglib/2.52
> Reviewed commits have been landed. Closing PR #66647 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug