Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -4697,11 +4697,15 @@ std::optional<VideoFrameMetadata> MediaPlayerPrivateGStreamer::videoFrameMetadat
     metadata.presentedFrames = m_sampleCount;
 
     if (GST_BUFFER_PTS_IS_VALID(buffer)) {
-        auto segment = gst_sample_get_segment(m_sample.get());
-        RELEASE_ASSERT(segment);
-        uint64_t streamTime;
-        if (int sign = gst_segment_to_stream_time_full(segment, GST_FORMAT_TIME, GST_BUFFER_PTS(buffer), &streamTime))
-            metadata.mediaTime = sign * fromGstClockTime(streamTime).toDouble();
+        if (isMediaStreamPlayer())
+            metadata.mediaTime = currentTime().toDouble();
+        else {
+            auto segment = gst_sample_get_segment(m_sample.get());
+            RELEASE_ASSERT(segment);
+            uint64_t streamTime;
+            if (int sign = gst_segment_to_stream_time_full(segment, GST_FORMAT_TIME, GST_BUFFER_PTS(buffer), &streamTime))
+                metadata.mediaTime = sign * fromGstClockTime(streamTime).toDouble();
+        }
     }
 
     // FIXME: presentationTime and expectedDisplayTime might not always have the same value, we should try getting more precise values.
